# Ledger-Email-Client

./: .gitignore  README.md
docs/: ARCHITECTURE.md  CNAME  index.html
ledger-cli/: ledger_cli.py  ledger_client.py  test_smoke.py
ledger-core/: Cargo.toml
ledger-core/src/: main.rs
ledger-core/src/api/: gmail.rs  identity.rs  messages.rs  mod.rs  peers.rs  settings.rs
ledger-core/src/crypto/: envelope.rs  keys.rs  mod.rs
ledger-core/src/dht/: store.rs
ledger-core/src/fallback/: router.rs
ledger-core/src/gmail/: imap_client.rs  mod.rs  smtp_client.rs
ledger-core/src/models/: message.rs
ledger-core/src/p2p/: behaviour.rs  mod.rs  node.rs  protocol.rs
ledger-core/src/store/: db.rs
ledger-plugins/: pom.xml
ledger-plugins/src/main/java/com/ledger/plugins/: LedgerApiClient.java  Message.java  MessagePlugin.java  PluginEngine.java
ledger-plugins/src/main/java/com/ledger/plugins/plugins/: AutoTagger.java  SpamFilter.java
ledger-ui/: App.axaml  App.axaml.cs  LedgerUI.csproj  Program.cs  app.manifest
ledger-ui/Services/: LedgerApiClient.cs
ledger-ui/Styles/: AppStyles.axaml
ledger-ui/ViewModels/: MainWindowViewModel.cs
ledger-ui/Views/: MainWindow.axaml  MainWindow.axaml.cs
scripts/: setup-debian.sh  setup-macos.sh  setup-windows.ps1
