[package]
name = "ledger-core"
version = "0.1.0"
edition = "2021"
description = "Ledger — Decentralized Encrypted Mail Core Engine"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework (REST API)
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"

# Encoding
base64 = "0.22"
bs58 = "0.5"
hex = "0.4"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# libp2p
libp2p = { version = "0.53", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "identify",
    "request-response",
    "macros",
    "dns",
    "mdns",
    "cbor",
] }

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
imap = "2"
native-tls = "0.2"
mailparse = "0.15"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Directories
dirs = "5"
